grammar.js
    source_file: ($) => repeat($.statement),

    // Comments
    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    literal: ($) =>
      choice(
        $.number_literal,
        $.string_literal,
        $.boolean_literal,
        $.char_literal,
      ),

    number_literal: ($) => choice(/[0-9]+/, /[0-9]+\.[0-9]+/),

    statement: ($) =>
      choice(
        // Declarations
        $.module_declaration,
        $.import_declaration,
        $.function_declaration,
        $.proc_declaration,
        $.struct_declaration,
        $.kind_declaration,
        $.enum_declaration,
        $.variable_declaration,
        $.implementation,
        $.macro_declaration,

        // Statements with possible attributes
        seq(
          repeat1($.attribute),
          choice(
            $.function_declaration,
            $.proc_declaration,
            $.struct_declaration,
            $.kind_declaration,
            $.enum_declaration,
            $.variable_declaration,
            $.implementation,
          ),
        ),

        // Other statements
        $.assignment,
        prec(3, $.if_statement),
        $.while_statement,
        $.for_statement,
        $.return_statement,
        $.match_statement,
        $.macro_invocation,
        $.expression_statement,
        prec(1, $.block),
        $.break_statement,
        $.continue_statement,
      ),

    function_declaration: ($) =>
      seq(
        optional("pub"),
        "fn",
        field("name", $.identifier),
        optional(field("generic_params", $.generic_params)),
        field("parameters", $.parameters),
        optional(seq("->", field("return_type", $.type))),
        choice(
          field("body", $.block),
          seq("=>", field("expression", $.expression)),
        ),
      ),

    parameters: ($) => seq("(", optional(commaSep($.parameter)), ")"),

    variable_declaration: ($) =>
      seq(
        optional("pub"),
        choice("let", "var", "const"),
        optional("mut"),
        field("name", $.identifier),
        optional(seq(":", field("type", $.type))),
        "=",
        field("value", choice($.expression, $.unit_literal)),
      ),

    // Assignment
    block: ($) => seq(repeat1($.statement), "end"),

    expression: ($) =>
      choice(
        // Call expressions (highest precedence)
        prec(15, $.function_call),
        prec(20, $.method_call),
        prec(11, $.member_expression),
        prec(11, $.index_expression),

        // Simple expressions (high precedence)
        prec(10, $.identifier),
        prec(9, $.literal),

        // Other expressions
        $.binary_expression,
        $.unary_expression,
        $.lambda,
        $.block_expression,
        $.if_expression,

        // Creation expressions (lower precedence than call expressions)
        prec(8, $.struct_expression),
        prec(8, $.array_literal),
        prec(8, $.tuple_literal),
        prec(8, $.enum_variant_expression),

        // Macro expressions
        $.macro_expression,
        $.type_cast,

        // Parenthesized expressions
        $.parenthesized_expression,
      ),

    parenthesized_expression: ($) => prec(10, seq("(", $.expression, ")")),

    binary_expression: ($) => {
      const PREC = {
        OR: 1,
        AND: 2,
        EQUALITY: 3,
        COMPARISON: 4,
        ADD: 5,
        MULTIPLY: 6,
        EXPONENT: 7,
        PIPE: 0,
      };

      return choice(
        prec.left(
          PREC.OR,
          seq(
            field("left", $.expression),
            choice("||", "or"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.AND,
          seq(
            field("left", $.expression),
            choice("&&", "and"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.EQUALITY,
          seq(
            field("left", $.expression),
            choice("==", "!="),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.COMPARISON,
          seq(
            field("left", $.expression),
            choice("<=", ">=", "<", ">"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.ADD,
          seq(
            field("left", $.expression),
            choice("+", "-"),
            field("right", $.expression),
          ),
        ),
        prec.left(
          PREC.MULTIPLY,
          seq(
            field("left", $.expression),
            choice("*", "/", "%"),
            field("right", $.expression),
          ),
        ),
        prec.right(
          PREC.EXPONENT,
          seq(field("left", $.expression), "^", field("right", $.expression)),
        ),
        prec.left(
          PREC.PIPE,
          seq(field("left", $.expression), "|>", field("right", $.expression)),
        ),
      );
    },
